# cax

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  brepdbeditor.ves  brepdbnodes.ves  brepgrapheditor.ves  brepgraphnodes.ves  brepireditor.ves  brepirnodes.ves  brepkiteditor.ves  brepkitnodes.ves  breptopoeditor.ves  breptoponodes.ves  cadcvteditor.ves  cadcvtnodes.ves  deepbrepeditor.ves  deepbrepnodes.ves  gcseditor.ves  gcsnodes.ves  nurbseditor.ves  nurbsnodes.ves  parteditor.ves  partnodes.ves  sketcheditor.ves  sketcheditor2.ves  sketchnodes.ves  sketchnodes2.ves  solideditor.ves  solideditor2.ves  solidnodes.ves  solidnodes2.ves
brepdb_test/: CMakeLists.txt  test_component_diff.cpp  test_component_view.cpp  test_typed_pool.cpp  test_version_tree.cpp  test_world_file.cpp
breptopo_test/: CMakeLists.txt  test_compgraph_core.cpp  test_evaluator.cpp  test_irgraph.cpp  test_reconnect.cpp  test_shape_cache.cpp
gcsgen/: Scene.h  (+7 more)
plugins/zw_export/: .gitignore  CMakeLists.txt  ZwCaxExport.cpp  ZwCaxPlugin.cpp
test/asmsolver_c/: CMakeLists.txt  asmsession_drag_test.cpp  import_solve_test.cpp  scissor_test.cpp
test/brepdb_occt_c/: CMakeLists.txt  catch_main.cpp  test_prim_maker.cpp  test_shape_selector.cpp  test_shape_tools.cpp  test_step_file.cpp  test_topo_algo.cpp  test_topo_graph_builder.cpp  test_world_roundtrip.cpp
test/brepgraph_c/: CMakeLists.txt  test_calc_persist.cpp  test_calcgraph_core.cpp  test_comp_persist.cpp  test_compgraph_core.cpp  test_evaluator.cpp  test_incremental_lower.cpp  test_irgraph.cpp  test_reconnect.cpp  test_shape_cache.cpp
test/cadcvt_c/: CMakeLists.txt
test/cadcvt_c/golden/: GeoFingerprint.cpp  GeoFingerprint.h  IrFingerprint.cpp  IrFingerprint.h  golden_main.cpp
test/cadcvt_c/golden/fixtures/: README.md  circle_disc.geo.golden  circle_disc.ir.golden  circle_disc.xml  pad_box.geo.golden  pad_box.ir.golden  pad_box.xml  pocket_box.geo.golden  pocket_box.ir.golden  pocket_box.xml  prim_box.geo.golden  prim_box.ir.golden  prim_box.xml  revolve_opaque.ir.golden  revolve_opaque.xml
test/cadcvt_c/golden/fixtures/examples/: SOURCES.txt  exercise2d-01.ir.golden  exercise2d-01.xml  exercise2d-02.xml  exercise2d-03.geo.golden  exercise2d-03.xml  part_design_example.geo.golden  part_design_example.ir.golden  part_design_example.xml
test/cadcvt_c/golden/fixtures/examples/100CadExercises/: Exercise 2D -10_byHannu.geo.golden  Exercise 2D -10_byHannu.ir.golden  Exercise 2D -1_byHannu.geo.golden  Exercise 2D -1_byHannu.ir.golden  Exercise 2D -2_byHannu.ir.golden  Exercise 2D -3_byHannu.geo.golden  Exercise 2D -3_byHannu.ir.golden  Exercise 2D -4_byHannu.ir.golden  Exercise 2D -5_byHannu.geo.golden  Exercise 2D -5_byHannu.ir.golden  Exercise 2D -6_byHannu.ir.golden  Exercise 2D -7_byHannu.geo.golden  Exercise 2D -7_byHannu.ir.golden  Exercise 2D -7_fillets_byHannu.geo.golden  Exercise 2D -7_fillets_byHannu.ir.golden  Exercise 2D -8_byHannu.geo.golden  Exercise 2D -8_byHannu.ir.golden  Exercise 2D -9_byHannu.geo.golden  Exercise 2D -9_byHannu.ir.golden  Page_009_Exercise2D-01_byHannu.geo.golden  Page_009_Exercise2D-01_byHannu.ir.golden  Page_010_Exercise2D-02_byHannu.geo.golden  Page_010_Exercise2D-02_byHannu.ir.golden  Page_011_Exercise2D-03_byHannu.geo.golden  Page_011_Exercise2D-03_byHannu.ir.golden  Page_012_Exercise2D-04_byHannu.geo.golden  Page_012_Exercise2D-04_byHannu.ir.golden  Page_013_Exercise2D-05_byHannu.geo.golden  Page_013_Exercise2D-05_byHannu.ir.golden  Page_014_Exercise2D-06_byHannu.geo.golden  Page_014_Exercise2D-06_byHannu.ir.golden  Page_015_Exercise2D-07_byHannu.geo.golden  Page_015_Exercise2D-07_byHannu.ir.golden  Page_015_Exercise2D-07_fillets_byHannu.ir.golden  Page_016_Exercise2D-08_byHannu.geo.golden  Page_016_Exercise2D-08_byHannu.ir.golden  Page_017_Exercise2D-09_byHannu.geo.golden  Page_017_Exercise2D-09_byHannu.ir.golden  Page_018_Exercise2D-10_byHannu.geo.golden  Page_018_Exercise2D-10_byHannu.ir.golden  (+225 more)
test/cadcvt_c/golden/fixtures/examples/_optional_mesh_stress_1652objs/: sc230_theta_large_screen-from-dae.ir.golden
test/cadcvt_c/golden/fixtures/examples/freecad_assembly_test_corpus/: SOURCES.txt
test/cadcvt_c/golden/fixtures/examples/freecad_assembly_test_corpus/Assembly4_examples/: Bague.geo.golden  Bague.ir.golden  Bielle.geo.golden  Bielle.ir.golden  Crankshaft.ir.golden  Cuve.geo.golden  Cuve.ir.golden  Cylindre.geo.golden  Cylindre.ir.golden  Piston.geo.golden  Piston.ir.golden  Screw_CHC.geo.golden  Screw_CHC.ir.golden  Support.geo.golden  Support.ir.golden  Test_Block_00.geo.golden  Test_Block_00.ir.golden  Test_Block_01.geo.golden  Test_Block_01.ir.golden  Triangle.geo.golden  Triangle.ir.golden  Wheel.geo.golden  Wheel.ir.golden  asm4-test.geo.golden  asm4-test.ir.golden  asm_Bielle.geo.golden  (+6 more)
test/cadcvt_c/golden/fixtures/examples/native_AssemblyWB_official/: AssemblyExample.geo.golden  AssemblyExample.ir.golden
test/cadcvt_c/golden/fixtures/examples/theta-8020-3dof_cockpit_Assembly4/: extrusion-profile-1010-S.geo.golden  extrusion-profile-1010-S.ir.golden  extrusion-profile-1020-S.geo.golden  extrusion-profile-1020-S.ir.golden  extrusion-profile-1030-S.geo.golden  extrusion-profile-1030-S.ir.golden
test/cadcvt_c/golden/fixtures/sw/: circular_pattern.ir.golden  circular_pattern.sldprt  handle_rod.ir.golden  handle_rod.sldprt  knob.ir.golden  knob.sldprt  oleopiston.ir.golden  oleopiston.sldprt  sw_pad_box.SLDPRT  sw_pad_box.ir.golden  sweepcutextrude.ir.golden  sweepcutextrude.sldprt  tutor1a.ir.golden  tutor1a.sldprt  tutor2_fillet_shell.ir.golden  tutor2_fillet_shell.sldprt
test/cadcvt_c/golden/fixtures/zw/: box.cax.geo.golden  box.cax.ir.golden  box.cax.json  ptn_ftr_0.cax.geo.golden  ptn_ftr_0.cax.ir.golden  ptn_ftr_0.cax.json  r2900_100.cax.geo.golden  r2900_100.cax.ir.golden  r2900_100.cax.json  r2900_20.cax.geo.golden  r2900_20.cax.ir.golden  r2900_20.cax.json
test/deepbrep_c/: CMakeLists.txt  test_gnn_model.cpp  test_layers.cpp  test_tensor.cpp  test_toy_train.cpp
tools/brp_diff/: CMakeLists.txt  main.cpp
tools/zw_verify/: CMakeLists.txt  README.md  main.cpp  verify.ps1
(+844 files in other folders)
